#Copyright 2022 Hamidreza Sadeghi. All rights reserved.
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.


[metadata]
name = LargeNumbers
version = 1.0.0
author = Hamidreza Sadeghi
author_email = sadeghi.hamidreza1400@gmail.com
description = In this repository, a library has been provided that allows you to perform the four basic operations of addition, subtraction, multiplication and division on large and very large numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HRSadeghi/LargeNumbers.git
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.4
include_package_data = True
install_requires =
    numpy
